I made an upgrad to it, and it is pretty good
